# backend/core/db/models/chat.go
@@ -9,16 +9,11 @@ import (
 
 // модель чата
 type Chat struct {
-	ID			uuid.UUID	`gorm:"not null; type:uuid; primaryKey" json:"id"`
-	// FirstUserID 	uuid.UUID	`gorm:"type:uuid; uniqueIndex:idx_unique_chat_participants" json:"-"`
-	// SecondUserID 	uuid.UUID	`gorm:"type:uuid; uniqueIndex:idx_unique_chat_participants" json:"-"`
-	// // ассоциация первого участника чата
-	// FirstUser 		User 		`gorm:"foreignKey:FirstUserID; constraint:OnUpdate:CASCADE,OnDelete:SET NULL" json:"firstUser"`
-	// // ассоциация второго участника чата
-	// SecondUser 		User 		`gorm:"foreignKey:SecondUserID; constraint:OnUpdate:CASCADE,OnDelete:SET NULL" json:"secondUser"`
-	// ассоциация участников чата
+	// uuid чата
+	ID			uuid.UUID	`gorm:"not null; type:uuid; primaryKey" json:"id" example:"0aafe1fd-0088-455b-9269-0307aae15bcc"`
+	// участники чата
 	Users		[]User		`gorm:"many2many:chat_participants" json:"users"`
-	// ассоциация сообщений
+	// сообщения чата
 	Messages 	[]Message 	`gorm:"foreignKey:ChatID" json:"messages"`
 }
 
@@ -27,10 +22,12 @@ type Message struct {
 	ID			uuid.UUID	`gorm:"not null; type:uuid; primaryKey; autoIncrement" json:"-"`
 	ChatID 		uuid.UUID	`gorm:"not null; type:uuid; index" json:"-"`
 	SenderID 	uuid.UUID	`gorm:"not null; type:uuid" json:"-"`
-	Content		string 		`gorm:"not null; type: LONGTEXT" json:"content"`
-	CreatedAt	time.Time 	`gorm:"not null; autoCreateTime:true" json:"createdAt"`
+	// текст сообщения
+	Content		string 		`gorm:"not null; type: LONGTEXT" json:"content" example:"sample message"`
+	// время создания сообщения
+	CreatedAt	time.Time 	`gorm:"not null; autoCreateTime:true" json:"createdAt" example:"2024-11-13T12:34:56Z"`
 	// ассоциация c чатом, к которому принадлежат сообщения
-	// Chat     	Chat     	`gorm:"foreignKey:ChatID; constraint:OnUpdate:CASCADE,OnDelete:CASCADE" json:"-"`
-	// ассоциация отправителя сообщения
+	Chat     	Chat     	`gorm:"foreignKey:ChatID; constraint:OnUpdate:CASCADE,OnDelete:CASCADE" json:"-"`
+	// отправитель сообщения
 	Sender 		User 		`gorm:"foreignKey:SenderID; constraint:OnUpdate:CASCADE,OnDelete:CASCADE" json:"sender"`
 }
